service bg-red 768px done

--- a/scss/blocks/_content-container.scss
+++ b/scss/blocks/_content-container.scss
@@ -86,7 +86,7 @@
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .content-container {
         max-width: 530px;
-        margin: 31px 32px 75px 37px;
+        margin: 31px 32px 40px 37px;
         line-height: 24px;
     
         &__item {
@@ -104,7 +104,7 @@
     
             &_tiny {
                 font-size: 14px;
-                color: $text-color-light;
+                // color: $text-color-light;
             }
         }
     
@@ -116,8 +116,8 @@
     
     .content-container_left {
         max-width: 502px;
-        margin-top: 213px;
-        margin-left: 300px;
+        margin-top: 47px;
+        margin-left: 162px;
         line-height: 27px;
     
         &__item {
@@ -125,7 +125,7 @@
             margin-top: 15px;
             margin-bottom: 15px;
             font-size: 20px;
-            color: $text-color-white;
+            // color: $text-color-white;
     
             &::before {
                 position: absolute;
@@ -134,14 +134,14 @@
                 width: 33px;
                 height: 33px;
                 top: 10px;
-                left: -100px;
+                left: -80px;
             }
         }
     
         &__item_sp {
-            margin-top: 55px;
-            font-weight: 300;
-            line-height: 30px;
+            margin-top: 36px;
+            // font-weight: 300;
+            // line-height: 30px;
     
             &::before {
                 position: absolute;
@@ -150,19 +150,18 @@
                 width: 66px;
                 height: 66px;
                 top: 0px;
-                left: -116px;
+                left: -96px;
             }
         }
     
-        & .content-container__item_bold {
-            font-size: 30px;
-        }
+        // & .content-container__item_bold {
+        //     font-size: 30px;
+        // }
     }
     
     .content-container_right {
-        max-width: 615px;
-        margin-top: 213px;
-        margin-left: 119px;
+        min-width: 640px;
+        margin: 14px 47px 46px 63px;
     }
 }
 
