--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -29,7 +29,7 @@
 
         &_contacts {
             margin-top: 21px;
-            margin-left: 245px;
+            margin-left: 0;
         }
 
         &__icon,
