--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     display: flex;
     max-width: 1920px;
+    min-width: 1920px;
     min-height: 320px;
     margin: 0 auto;
     font-family: $main-font;
@@ -32,7 +33,7 @@
     flex-direction: column;
     max-width: 202px;
     margin-top: 75px;
-    margin-left: 250px;
+    margin-left: 253px;
 
     &__link {
         font-size: 18px;
@@ -46,14 +47,17 @@
     flex-direction: column;
     margin-left: 166px;
 
-    &_top{
+    &_top {
         margin-top: 75px;
+        margin-left: 0;
     }
-    &_bottom{
+
+    &_bottom {
         max-width: 368px;
         margin-top: 45px;
+        margin-left: 0;
     }
-    
+
     & .content-container__item {
         // font-size: 20px;
 
@@ -67,6 +71,81 @@
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {}
 
-@media screen and (min-width: 481px) and (max-width: 768px) {}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .footer {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 750px;
+        min-width: 750px;
+        max-height: 383px;
+        margin: 330px auto 0;
+        // font-family: $main-font;
+        // font-weight: 400;
+        // background-color: $bg-color-white;
+    }
+
+    .footer-logo {
+        display: flex;
+        flex-direction: row;
+        max-height: 50px;
+        margin-top: 52px;
+        margin-bottom: 48px;
+        margin-left: 48px;
+
+        &__image {
+            max-width: 208px;
+            min-height: 50px;
+            margin-bottom: 0;
+        }
+
+        &__text {
+            min-width: 250px;
+            margin-left: 42px;
+            // color: $text-color-dark;
+        }
+    }
+
+    .footer-menu {
+        display: flex;
+        flex-direction: column;
+        max-width: 202px;
+        margin-top: 0;
+        margin-bottom: 43px;
+        margin-left: 48px;
+
+        // &__link {
+        //     font-size: 18px;
+        //     line-height: 27px;
+        //     color: $text-color-main;
+        // }
+    }
+
+    .footer-contacts {
+        display: flex;
+        flex-direction: column;
+        margin-left: 48px;
+
+        &_top {
+            margin-top: 0;
+            margin-left: 0;
+        }
+
+        &_bottom {
+            max-width: 368px;
+            margin-top: 50px;
+            margin-left: 0;
+        }
+
+        & .content-container__item {
+            // font-size: 20px;
+            max-width: 368px;
+            font-size: 18px;
+
+            &_bold {
+                font-size: 30px;
+            }
+        }
+    }
+}
 
 @media screen and (min-width: 320px) and (max-width: 480px) {}
