fix footer bugs

--- a/scss/blocks/_content-container.scss
+++ b/scss/blocks/_content-container.scss
@@ -10,7 +10,6 @@
 
         &_bold {
             font-weight: 700;
-            color:$text-color-white;
         }
 
         &_red {
@@ -89,45 +88,45 @@
         max-width: 530px;
         margin: 31px 32px 40px 37px;
         line-height: 24px;
-    
+
         &__item {
             margin-bottom: 10px;
             font-size: 16px;
             // color: $text-color-main;
-    
+
             // &_bold {
             //     font-weight: 700;
             // }
-    
+
             // &_red {
             //     color: $text-color-title;
             // }
-    
+
             &_tiny {
                 font-size: 14px;
-                // color: $text-color-light;
+                color: $text-color-light;
             }
         }
-    
+
         &__icon {
             max-height: 44px;
             margin-bottom: 21px;
         }
     }
-    
+
     .content-container_left {
         max-width: 502px;
         margin-top: 47px;
         margin-left: 162px;
         line-height: 27px;
-    
+
         &__item {
             position: relative;
             margin-top: 15px;
             margin-bottom: 15px;
             font-size: 20px;
             // color: $text-color-white;
-    
+
             &::before {
                 position: absolute;
                 content: '';
@@ -138,12 +137,12 @@
                 left: -80px;
             }
         }
-    
+
         &__item_sp {
             margin-top: 36px;
             // font-weight: 300;
             // line-height: 30px;
-    
+
             &::before {
                 position: absolute;
                 content: '';
@@ -154,12 +153,12 @@
                 left: -96px;
             }
         }
-    
+
         // & .content-container__item_bold {
         //     font-size: 30px;
         // }
     }
-    
+
     .content-container_right {
         min-width: 640px;
         margin: 14px 47px 46px 63px;
