--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -21,11 +21,13 @@
     }
 
     &_bg-red {
+        position: relative;
         display: grid;
         grid-template-columns: 1fr 1fr;
         max-height: 670px;
         min-height: 670px;
         background-color: $bg-color-main;
+        z-index: 0;
     }
 
     &_bg-white {
@@ -40,10 +42,18 @@
     }
 }
 
-
-@media screen and (min-width: 1025px) and (max-width: 1440px) {
-    
+.service_bg-red a {
+    color: $text-color-white;
 }
+
+.service_bg-red__img {
+    position: absolute;
+    top: 0;
+    left: 582px;
+    z-index: -1;
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {}
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {}
 
@@ -52,13 +62,13 @@
         position: relative;
         max-width: 750px;
         margin: 0 auto;
-    
+
         &_bg-grey {
             // max-height: 1091px;
             min-height: 1091px;
             margin-top: 47px;
             padding-top: 647px;
-    
+
             &__image {
                 max-height: 401px;
                 // margin: auto;
@@ -68,15 +78,17 @@
                 margin-left: 50px;
             }
         }
-    
+
         &_bg-red {
+            position: relative;
             display: flex;
             flex-wrap: wrap;
             // grid-template-columns: 1fr 1fr;
             max-height: 835px;
             min-height: 835px;
+            z-index: 0;
         }
-    
+
         &_bg-white {
             position: absolute;
             top: 0;
@@ -86,6 +98,13 @@
             min-height: 622px;
             max-width: 610px;
         }
+    }
+
+    .service_bg-red__img {
+        position: absolute;
+        top: 11px;
+        left: 189px;
+        z-index: -1;
     }
 }
 
