--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -45,6 +45,29 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .title-container {
+        max-width: 284px;
+        line-height: 29px;
 
-//нужен модификатор для контейнера с заголовком в белом абсолютном квадрате
+        &_contacts {
+            margin-top: 21px;
+            margin-left: 0;
+        }
+
+        &__icon,
+        &__title {
+            display: inline-block;
+            margin-top: 50px;
+        }
+
+        &__icon {
+            margin-left: -22px;
+        }
+
+        &__title {
+            margin-left: 21px;
+            font-size: 30px;
+        }
+    }
+}
