--- a/scss/blocks/_content-container.scss
+++ b/scss/blocks/_content-container.scss
@@ -165,4 +165,84 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .content-container {
+        max-width: 340px;
+        margin: 30px 22px 26px 26px;
+        line-height: 24px;
+
+        &__item {
+            margin-bottom: 10px;
+            font-size: 16px;
+            // color: $text-color-main;
+
+            // &_bold {
+            //     font-weight: 700;
+            // }
+
+            // &_red {
+            //     color: $text-color-title;
+            // }
+
+            &_tiny {
+                font-size: 14px;
+                color: $text-color-light;
+            }
+        }
+
+        &__icon {
+            max-height: 44px;
+            margin-bottom: 21px;
+        }
+    }
+
+    .content-container_left {
+        max-width: 502px;
+        margin-top: 47px;
+        margin-left: 162px;
+        line-height: 27px;
+
+        &__item {
+            position: relative;
+            margin-top: 15px;
+            margin-bottom: 15px;
+            font-size: 20px;
+            // color: $text-color-white;
+
+            &::before {
+                position: absolute;
+                content: '';
+                background-image: url('../../images/block-8_icons/icon_small_question_mark.svg');
+                width: 33px;
+                height: 33px;
+                top: 10px;
+                left: -80px;
+            }
+        }
+
+        &__item_sp {
+            margin-top: 36px;
+            // font-weight: 300;
+            // line-height: 30px;
+
+            &::before {
+                position: absolute;
+                content: '';
+                background-image: url('../../images/block-8_icons/icon_phone.svg');
+                width: 66px;
+                height: 66px;
+                top: 0px;
+                left: -96px;
+            }
+        }
+
+        // & .content-container__item_bold {
+        //     font-size: 30px;
+        // }
+    }
+
+    .content-container_right {
+        min-width: 640px;
+        margin: 14px 47px 46px 63px;
+    }
+}
